crosshair/examples/deal/bugs_detected/list_to_dict.out
list_to_dict.py:8: error: false when calling list_to_dict(('', '')) (which returns {'': ''})
